Update init_jetty.sh